# HPVD-M22

./: .gitignore  GITHUB_SETUP.md  HPVD_Demo_Presentation.ipynb  HPVD_M22_Function_Walkthrough.ipynb  HPVD_Test_Results_Visualization.ipynb  README.md  inspect_scenario_a.py  pyproject.toml  requirements.txt
docs/: End_to_End_Design.md  HPVD_Adaptation_Strategy.md  HPVD_Architecture_Document.md  HPVD_Technical_Specification.md  Timeline.md  synthetic_test_results.md
hpvd_outputs/: hpvd_output.json  pmr_input.json
sources/: HPVD-20251210145834.md  How HPVD + PMR-DB Power Kalibry Finance-20251209213850.md  KALIBRY FINANCIAL MVP.docx-20251209213923.md  MATRIX22_12_Week_Task_Breakdown.xlsx  MATRIX22_Project_Master_Guide.docx  MATRIX22_Workflow_Testing_Guide.docx
src/: __init__.py  demo_hpvd.py
src/hpvd/: __init__.py  __main__.py  cli.py  dense_index.py  distance.py  dna_similarity.py  embedding.py  engine.py  family.py  sparse_index.py  synthetic_data_generator.py  trajectory.py
src/hpvd/adapters/: __init__.py  j13_adapter.py  j14_emitter.py  j15_emitter.py  j16_emitter.py  j_file_schemas.py  pipeline_engine.py  retrieval_strategy.py  strategy_dispatcher.py
src/hpvd/adapters/strategies/: __init__.py  document_strategy.py  finance_strategy.py
src/prototypes/: __init__.py  bm25_prototype.py
synthetic_data/scenario_A/: metadata.json
tests/: __init__.py  conftest.py  test_adapters.py  test_contract.py  test_embedding.py  test_sparse_index.py  test_synthetic_scenarios.py  test_trajectory.py
